--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             color:darkorchid;
         }
         input[type="text"]{
-            width: 50%;
-            height:20px;
+            width: 80%;
+            height:40px;
             /* padding:25px;x    */
             margin:25px;
             border-radius: 10px;
@@ -49,14 +49,19 @@
             min-width: 100px;
             font-size: 1.2em;
             border:1px solid black;
-            border-radius: 20px;
+            border-top-left-radius: 20px;
+            border-top-right-radius: 20px;
             border-bottom: none;
             margin-top: 1.5em;
         }
         .tabbing{
-            width:30%;
+            width:50%;
         }
-        
+        div h2{
+            align-self:  center;
+            text-decoration: underline;
+            letter-spacing: 3px;
+        }
     </style>
 </head>
 <body>
@@ -66,10 +71,9 @@
             <button class="tabs" id="contactmebutton"  onclick="activate('contactme','contactmebutton')">Contact Me!</button>
             <button class="tabs" id="confirmationbutton"  onclick="activate('confirmation','confirmationbutton')">Confirmation!</button>
     </div>
-        <div style="display: flex; flex-basis: 80%;justify-content: center;border:2px solid black;border-radius: 20px;">
-            <div class="tabbing" style="display: none;"  id="home" style="display: flex;">
-                <h2 style="width:100%">Home</h2>
-                </br>
+        <div style="display: flex; flex-basis: 80%;justify-content: center;border:2px ridge black;border-radius: 20px;">
+            <div class="tabbing" style="display: none;flex-direction: column;"  id="home" style="display: flex;">
+                <h2>Home</h2>
                 <h3>Details</h3>
                 <ul>
                     <li>Name:Abhijeet</li>
@@ -79,13 +83,13 @@
                     <li>Siblings:1</li>
                 </ul>
             </div>
-            <div class="tabbing" style="display: none;" id="aboutme">
-                <h2>About Me</h2>
+            <div class="tabbing" style="display: none;flex-direction: column;" id="aboutme">
+                <h2 style="text-align: center;width: 100%;">About Me</h2>
                 <h3>Hobbies</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt sequi odit cum recusandae sapiente fugit a neque, nostrum consequatur vel minus, provident eaque impedit dignissimos natus totam libero soluta obcaecati?
                 </p>
             </div>
-            <div class="tabbing" style="display: block;" id="contactme">
+            <div class="tabbing" style="display: block;flex-direction: column;" id="contactme">
                 <h2>Contact Me!</h2>
                 <form action="" onsubmit="return sendConfirmation()" id="OnlyForm">
                     <label for="Subject">Subject</label><br>
