--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         }
         button.tabs{
             color: darkorchid;
-            height:100px ;
+            height:60px ;
             min-width: 100px;
             font-size: 1.2em;
             border:1px solid black;
@@ -53,6 +53,7 @@
             border-top-right-radius: 20px;
             border-bottom: none;
             margin-top: 1.5em;
+            padding: 20px;
         }
         .tabbing{
             width:50%;
@@ -101,7 +102,7 @@
                     <br>
                     <button type="submit">Submit</button>
                 </form>
-                <h2 id="resultMessageh2">Waiting for a new Message!</h2>
+                <h3 id="resultMessageh2">Waiting for a new Message!</h2>
             </div>
             <div class="tabbing" id="confirmation" style="display:none";">
                 <h2 class="form-result" id="resultMessage">Waiting for you to send a mail.</h2>
