--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <button class="tabs" id="homebutton" onclick="activate('home','homebutton')">Home</button>
         <button class="tabs" id="aboutmebutton" onclick="activate('aboutme','aboutmebutton')">About Me!</button>
         <button class="tabs" id="contactmebutton" onclick="activate('contactme','contactmebutton')">Contact Me!</button>
-        <button class="tabs" id="confirmationbutton"
-            onclick="activate('confirmation','confirmationbutton')">Confirmation!</button>
+        <button class="tabs" id="confirmationbutton" onclick="activate('confirmation','confirmationbutton')">Confirmation!</button>
     </div>
     <div class="div-container">
         <div class="tabbing div-container-item-1" id="home">
@@ -34,9 +33,7 @@
         <div class="tabbing div-container-item-2" id="aboutme">
             <h2>About Me</h2>
             <h3>Hobbies</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt sequi odit cum recusandae sapiente
-                fugit a neque, nostrum consequatur vel minus, provident eaque impedit dignissimos natus totam libero
-                soluta obcaecati?
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt sequi odit cum recusandae sapiente fugit a neque, nostrum consequatur vel minus, provident eaque impedit dignissimos natus totam libero soluta obcaecati?
             </p>
         </div>
         <div class="tabbing div-container-item-3" id="contactme">
@@ -54,7 +51,17 @@
             <h3 id="resultMessageh2">Waiting for a new Message!</h2>
         </div>
         <div class="tabbing div-container-item-4" id="confirmation">
-                <h2 class=" form-result" id="resultMessage">Waiting for you to send a mail.</h2>
+            <h2 class="form-result" id="resultMessage">Waiting for you to send a mail.</h2>
+
+            <div class="grid-container">
+                <div class="photoitem photo-item-1"><img src="images/long1.jpg" alt=""></div>
+                <div class="photoitem photo-item-2"><img src="images/pexels-guillaume-meurice-1894350.jpg" alt=""></div>
+                <div class="photoitem photo-item-3"><img src="images/pexels-jeremy-bishop-3464632.jpg" alt=""></div>
+                <div class="photoitem photo-item-4"><img src="images/pexels-magda-ehlers-1635935.jpg" alt=""></div>
+                <div class="photoitem photo-item-5"><img src="images/pexels-victor-lavaud-2419307.jpg" alt=""></div>
+                <div class="photoitem photo-item-6"><img src="images/portr1.jpg" alt=""></div>
+                <div class="photoitem photo-item-7"><img src="images/pexels-s-migaj-1402850.jpg" alt=""></div>
+            </div>
         </div>
     </div>
     <script src="js/flexJavascript.js"></script>
