--- a/index.html
+++ b/index.html
@@ -12,54 +12,56 @@
 </head>
 
 <body>
-    <div class="button-container">
-        <button class="tabs" id="homebutton" onclick="activate('home','homebutton')">Home</button>
-        <button class="tabs" id="aboutmebutton" onclick="activate('aboutme','aboutmebutton')">About Me!</button>
-        <button class="tabs" id="contactmebutton" onclick="activate('contactme','contactmebutton')">Contact Me!</button>
-        <button class="tabs" id="confirmationbutton" onclick="activate('confirmation','confirmationbutton')">Photo Gallery!</button>
-    </div>
-    <div class="div-container">
-        <div class="tabbing div-container-item-1" id="home">
-            <h2>Home</h2>
-            <h3>Details:</h3>
-            <ul>
-                <li>Name:Abhijeet</li>
-                <li>Phone Number:684513156</li>
-                <li>Stay: Hyderabad</li>
-                <li>Funda of Life: Try to please others!</li>
-                <li>Siblings:1</li>
-            </ul>
+    <div class="main-container">
+        <div class="button-container">
+            <button class="tabs" id="homebutton" onclick="activate('home','homebutton')">Home</button>
+            <button class="tabs" id="aboutmebutton" onclick="activate('aboutme','aboutmebutton')">About Me!</button>
+            <button class="tabs" id="contactmebutton" onclick="activate('contactme','contactmebutton')">Contact Me!</button>
+            <button class="tabs" id="confirmationbutton" onclick="activate('confirmation','confirmationbutton')">Photo Gallery!</button>
         </div>
-        <div class="tabbing div-container-item-2" id="aboutme">
-            <h2>About Me</h2>
-            <h3>Hobbies</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt sequi odit cum recusandae sapiente fugit a neque, nostrum consequatur vel minus, provident eaque impedit dignissimos natus totam libero soluta obcaecati?
-            </p>
-        </div>
-        <div class="tabbing div-container-item-3" id="contactme">
-            <h2>Contact Me!</h2>
-            <form action="" onsubmit="return sendConfirmation()" id="OnlyForm">
-                <label for="Subject">Subject</label>
-                <input type="text" id="Subject" name="Subj" required>
-                <br>
-                <label for="Messagee">Message</label><br>
-                <textarea name="Message" id="Messagee" cols="30" rows="10" required></textarea>
-                <br>
-                <button type="submit">Submit</button>
-            </form>
-            <h3 id="resultMessageh2">Waiting for a new Message!</h2>
-        </div>
-        <div class="tabbing div-container-item-4" id="confirmation">
-            <h2 class="form-result" id="resultMessage">Photo Gallery</h2>
+        <div class="div-container">
+            <div class="tabbing div-container-item div-container-item-1" id="home">
+                <h2>Home</h2>
+                <h3>Details:</h3>
+                <ul>
+                    <li>Name:Abhijeet</li>
+                    <li>Phone Number:684513156</li>
+                    <li>Stay: Hyderabad</li>
+                    <li>Funda of Life: Try to please others!</li>
+                    <li>Siblings:1</li>
+                </ul>
+            </div>
+            <div class="tabbing div-container-item div-container-item-2" id="aboutme">
+                <h2>About Me</h2>
+                <h3>Hobbies</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt sequi odit cum recusandae sapiente fugit a neque, nostrum consequatur vel minus, provident eaque impedit dignissimos natus totam libero soluta obcaecati?
+                </p>
+            </div>
+            <div class="tabbing div-container-item div-container-item-3" id="contactme">
+                <h2>Contact Me!</h2>
+                <form action="" onsubmit="return sendConfirmation()" id="OnlyForm">
+                    <label for="Subject">Subject</label><br>
+                    <input type="text" id="Subject" name="Subj" required>
+                    <br>
+                    <label for="Messagee">Message</label><br>
+                    <textarea name="Message" id="Messagee" cols="30" rows="10" required></textarea>
+                    <br>
+                    <button type="submit">Submit</button>
+                </form>
+                <h3 id="resultMessageh2">Waiting for a new Message!</h2>
+            </div>
+            <div class="tabbing div-container-item div-container-item-4" id="confirmation">
+                <h2 class="form-result" id="resultMessage">Photo Gallery</h2>
 
-            <div class="grid-container" id="photo-Collage">
-                <div class="photoitem photo-item-1"><img src="images/long1.jpg" alt=""></div>
-                <div class="photoitem photo-item-2"><img src="images/pexels-guillaume-meurice-1894350.jpg" alt=""></div>
-                <div class="photoitem photo-item-3"><img src="images/pexels-jeremy-bishop-3464632.jpg" alt=""></div>
-                <div class="photoitem photo-item-4"><img src="images/pexels-magda-ehlers-1635935.jpg" alt=""></div>
-                <div class="photoitem photo-item-5"><img src="images/pexels-victor-lavaud-2419307.jpg" alt=""></div>
-                <div class="photoitem photo-item-6"><img src="images/portr1.jpg" alt=""></div>
-                <div class="photoitem photo-item-7"><img src="images/pexels-s-migaj-1402850.jpg" alt=""></div>
+                <div class="grid-container" id="photo-Collage">
+                    <div class="photoitem photo-item-1"><img src="images/long1.jpg" alt=""></div>
+                    <div class="photoitem photo-item-2"><img src="images/pexels-guillaume-meurice-1894350.jpg" alt=""></div>
+                    <div class="photoitem photo-item-3"><img src="images/pexels-jeremy-bishop-3464632.jpg" alt=""></div>
+                    <div class="photoitem photo-item-4"><img src="images/pexels-magda-ehlers-1635935.jpg" alt=""></div>
+                    <div class="photoitem photo-item-5"><img src="images/pexels-victor-lavaud-2419307.jpg" alt=""></div>
+                    <div class="photoitem photo-item-6"><img src="images/portr1.jpg" alt=""></div>
+                    <div class="photoitem photo-item-7"><img src="images/pexels-s-migaj-1402850.jpg" alt=""></div>
+                </div>
             </div>
         </div>
     </div>
