--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <br>
                     <button type="submit">Submit</button>
                 </form>
-                <h3 id="resultMessageh2">Waiting for a new Message!</h2>
+                <h3 id="resultMessageh2">Compose new Message!</h2>
             </div>
             <div class="tabbing div-container-item div-container-item-4" id="confirmation">
                 <h2 class="form-result" id="resultMessage">Photo Gallery</h2>
