--- a/index.html
+++ b/index.html
@@ -52,20 +52,27 @@
             </div>
             <div class="tabbing div-container-item div-container-item-4" id="confirmation">
                 <h2 class="form-result" id="resultMessage">Photo Gallery</h2>
-
-                <div class="grid-container" id="photo-Collage">
-                    <div class="photoitem photo-item-1"><img src="images/long1.jpg" alt=""></div>
-                    <div class="photoitem photo-item-2"><img src="images/pexels-guillaume-meurice-1894350.jpg" alt=""></div>
-                    <div class="photoitem photo-item-3"><img src="images/pexels-jeremy-bishop-3464632.jpg" alt=""></div>
-                    <div class="photoitem photo-item-4"><img src="images/pexels-magda-ehlers-1635935.jpg" alt=""></div>
-                    <div class="photoitem photo-item-5"><img src="images/pexels-victor-lavaud-2419307.jpg" alt=""></div>
-                    <div class="photoitem photo-item-6"><img src="images/portr1.jpg" alt=""></div>
-                    <div class="photoitem photo-item-7"><img src="images/pexels-s-migaj-1402850.jpg" alt=""></div>
+                <div class="grid-container" id="photo-collage">
+                    <div class="photoitem photo-item-1">
+                        <img src="https://www.w3schools.com/css/img_5terre.jpg" alt="">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                    <div class="photoitem photo-item-2">
+                        <img src="https://www.w3schools.com/css/img_forest.jpg" alt="">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                    <div class="photoitem photo-item-3">
+                        <img src="https://www.w3schools.com/css/img_lights.jpg" alt="">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                    <div class="photoitem photo-item-4">
+                        <img src="https://www.w3schools.com/css/img_mountains.jpg" alt="">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <script src="js/flexJavascript.js"></script>
+        <script src="js/flexJavascript.js"></script>
 </body>
 
 </html>
